tests/fixtures/type_checker/error/return_unexpected_value.galaxy
void return_unexpected_value()
{
    return 1;
}
